force-app/main/default/objects/SC_Gemini_Email_Response__c/SC_Gemini_Email_Response__c.object-meta.xml
<CustomObject>
    <label>Gemini Email Response</label>
    <nameField>
        <label>Gemini Email Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gemini Email Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>