force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Gemini Email Responses</relationshipLabel>
    <relationshipName>Gemini_Email_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>