force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Date__c</fullName>
    <label>Email Date</label>
    <type>DateTime</type>
</CustomField>