force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Gemini_Response__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Response__c</fullName>
    <label>Gemini Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>