force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Gemini_Score__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Score__c</fullName>
    <label>Gemini Score</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>