force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Gemini_Score_Text__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Score_Text__c</fullName>
    <label>Gemini Score Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>