force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Gemini_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Sync_Status__c</fullName>
    <label>Gemini Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Exported</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>