force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>