force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/Support_Agent_Response__c.field-meta.xml
<CustomField>
    <fullName>Support_Agent_Response__c</fullName>
    <label>Support Agent Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>