force-app/main/default/objects/SC_Gemini_Email_Response__c/fields/User_Hint__c.field-meta.xml
<CustomField>
    <fullName>User_Hint__c</fullName>
    <label>User Hint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>